fixing the README.yml

--- a/README.yml
+++ b/README.yml
@@ -1,7 +1,7 @@
-___
+---
 owner:
-   firstname: Tyler
-   lastname: Zhang
-   hid: sp19-222-91
-   community: E222
-   semester sp19
+  firstname: Tyler
+  lastname: Zhang
+  hid: sp19-222-91
+  community: E222
+  semester: sp19
