--- a/README.yml
+++ b/README.yml
@@ -3,7 +3,7 @@ owner:
   firstname: Tyler
   lastname: Zhang
   hid: sp19-222-91
-  community: E222
+  community: e222
   semester: sp19
 project:
   - title: "Spam Analysis with Spamalot"
